Check of temporary tables hiding for query fetched from QC (BUG#6084)